<resources>
    <string name="app_name">RoomieApp</string>
    <string name="bt_ingresar">Ingresar</string>
    <string name="bt_registrar">Registrar</string>
    <string name="txt_correo">Correo electronico</string>
    <string name="txt_usuario">Nombre de usuario</string>
    <string name="txt_contrasenia">Contraseña</string>
    <string name="txt_contrasenia2">Confirmar contraseña</string>
    <string name="bt_recuperar">Recuperar contraseña</string>
    <string name="txt_registro">Registro</string>
    <string name="bt_cerrar">Cerrar Sesion</string>
    <string name="bt_buscar">Buscar departamento</string>
    <string name="bt_ofrecer">Ofrecer departamento</string>
    <string name="txt_nuevacontra">Nueva Contraseña</string>
    <string name="bt_restablecer">Restablecer Contraseña</string>
    <string name="bt_cambiarLenguaje">Cambiar Lenguaje</string>
    <string name="txt_nombreDepartamento">Nombre del Departamento</string>
    <string name="txt_descripcion">Descripcion corta</string>
    <string name="txt_colonia">Colonia</string>
    <string name="txt_costo">Costo por mes</string>
    <string name="bt_subirdatos">Subir Datos</string>
    <string name="txt_idioma">Idioma</string>
    <string name="txt_cambiar_lenguaje">Cambiar Lenguaje</string>
    <string name="txt_mensajeria">Mensajes</string>
    <string name="txt_mensaje">Enviar Mensaje</string>
    <string name="txt_editar_depa">Editar Departamento</string>
    <string name="bt_eliminar">Eliminar departamento</string>
    <string name="txt_descripcion_videollamada">Por favor escribe el nombre del codigo con quien deseas hacer videollamada</string>
    <string name="txt_codigo">Código</string>
    <string name="txt_unirte">Unirte</string>
    <string name="txt_regresar">Regresar</string>
    <string name="txt_enviar">Enviar</string>
    <string name="txt_mensajed">Escribe un mensaje</string>
    <string name="txt_videollamada">Videollamada</string>
    <string name="txt_municipio">Seleccione un municipio:</string>

    <string name="txt_inicio">Inicio</string>
    <string name="txt_perfil">Perfil</string>
    <string name="txt_configuracion">Configuracion</string>
    <string name="txt_rentar">Rentar Departamento</string>
    <string name="txt_cerrar_sesion">Cerrar Sesion</string>
    <string name="txt_menu_principal">Menú Principal</string>
    <string name="txt_fondo_provicional">Menú de Buscar Roomie</string>


    <string name="txt_ingles">Ingles</string>
    <string name="txt_español">Español</string>

    <string name="abrir">Abrir</string>
    <string name="cerrar">Cerrar</string>


    <string name="sync_pref">Sincronizacion</string>
    <string name="sync_pref_summary">
        Obtén tus fotos, videos, contactos, subcripciones, etc en todos tus dispositivos.
    </string>
    <string name="pref_syncConnectionType">Tipo de conexión de sincronización</string>
    <string name="pref_syncConnectionType_dialog_title">Realizar la sincronización utilizada</string>
    <string name="pref_syncConnectionType_default_vlaue">WiFi</string>
    <string name="pref_syncConnectionType_summary">WiFi</string>

    <string-array name="pref_syncConnectionType_entries">
        <item>WiFi</item>
        <item>Datos Móviles</item>
        <item>WiFi/Datos móviles</item>
    </string-array>

    <string-array name="pref_syncConnectionType_values">
        <item>WiFi</item>
        <item>Móvil</item>
        <item>WiFi/Datos móviles</item>
    </string-array>
</resources>
