<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout2"
    tools:context=".Rentar"
    android:background="#F2EAED">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar"
            android:layout_width="70dp"
            android:layout_height="70dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_rentar"
            android:textColor="#16235A"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_nombreDepa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_nombreDepartamento"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txt_descripDepa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_descripcion"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txt_coloniaDepa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_colonia"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/sp_municipios"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

        <EditText
            android:id="@+id/txt_costoDepa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_costo"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="subirDatos"
            android:text="@string/bt_subirdatos" />


    </LinearLayout>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <include
            layout="@layout/main_nav_drawer_rentar"/>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>