<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity"
    android:padding="5sp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/fotoPerfil"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:src="@mipmap/ic_launcher" />
        <TextView
            android:id="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Omar Lopez"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:onClick="ClickHome"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/txt_regresar" />

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMensajes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    </androidx.recyclerview.widget.RecyclerView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btnEnviarFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/ic_menu_gallery"
            android:layout_gravity="center"
            />
        <EditText
            android:id="@+id/txtMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_mensajed"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/txt_enviar"/>
    </LinearLayout>

</LinearLayout>